...
    <string name="webcompat_reporter_label_url">URL</string>
    <!-- The error message of the URL text field when an invalid URL has been entered. -->
    <string name="webcompat_reporter_url_error_invalid">Please enter a valid URL</string>
    <!-- The label/title of a field in the Web Compat Reporter feature for explaining a high-level reason why the site is broken. -->
    <string name="webcompat_reporter_label_whats_broken_3">What’s not working?</string>
    <!-- Content description for the icon button that clears the selected broken site reason in the WebCompat Reporter. -->
    <string name="webcompat_reporter_clear_reason_content_description">Clear selected reason</string>
    <!-- The error message of the description when the user selects "Something else" as the reason, but left the description empty or too short. -->
    <string name="webcompat_reporter_description_error">Please enter at least 10 characters</string>
    <!-- The label/title of a mandatory field in the Web Compat Reporter feature for adding additional information. -->
    <string name="webcompat_reporter_label_mandatory_description">Describe the problem in detail to help us investigate the issue</string>
    <!-- The label/title of a optional field in the Web Compat Reporter feature for adding additional information. -->
    <string name="webcompat_reporter_label_optional_description">Describe the problem in detail to help us investigate the issue (optional)</string>
...
